# advent-of-code-rust

./: .gitignore  Cargo.toml  README.md  make_docs.sh
aoc15_02/: Cargo.toml
aoc15_02/src/: main.rs
aoc15_03/: Cargo.toml
aoc15_03/src/: main.rs
aoc15_04/: Cargo.toml
aoc15_04/src/: main.rs
aoc21_01/: Cargo.toml
aoc21_01/src/: main.rs
aoc21_02/: Cargo.toml
aoc21_02/src/: main.rs
aoc21_03/: Cargo.toml
aoc21_03/src/: main.rs
aoc21_04/: Cargo.toml
aoc21_04/src/: main.rs
aoc21_05/: Cargo.toml
aoc21_05/src/: main.rs  types.rs
aoc21_06/: Cargo.toml
aoc21_06/src/: main.rs
aoc21_07/: Cargo.toml
aoc21_07/src/: main.rs
aoc22_01/: Cargo.toml
aoc22_01/src/: main.rs
aoc22_02/: Cargo.toml
aoc22_02/src/: main.rs
aoc22_03/: Cargo.toml
aoc22_03/src/: main.rs
aoc22_04/: Cargo.toml
aoc22_04/src/: main.rs
aoc22_05/: Cargo.toml
aoc22_05/src/: main.rs  parse.rs
aoc22_06/: Cargo.toml
aoc22_06/src/: main.rs
aoc22_07/: Cargo.toml
aoc22_07/src/: fs.rs  main.rs
aoc22_08/: Cargo.toml
aoc22_08/src/: main.rs
aoc22_09/: Cargo.toml
aoc22_09/src/: main.rs
aoc22_10/: Cargo.toml
aoc22_10/src/: main.rs
aoc22_11/: Cargo.toml
aoc22_11/src/: main.rs  monkey.rs
aoc22_12/: Cargo.toml
aoc22_12/src/: main.rs
aoc22_13/: Cargo.toml
aoc22_13/src/: main.rs  main.rs.bak
aoc22_14/: Cargo.toml
aoc22_14/src/: main.rs
aoc22_15/: Cargo.toml
aoc23_05/: Cargo.toml
aoc23_07/: Cargo.toml
aoc23_08/: Cargo.toml  sample2.txt
docs/: crates.js  index.html  search-index.js  settings.html  source-files.js
template/: cookiecutter.json
(+43 files in other folders)
