[workspace]
members = [
  "aoc_utils",
  "aoc15_02",
  "aoc15_03",
  "aoc15_04",
  "aoc21_01",
  "aoc21_02",
  "aoc21_03",
  "aoc21_04",
  "aoc21_05",
  "aoc21_06",
  "aoc21_07",
  "aoc22_01",
  "aoc22_02",
  "aoc22_03",
  "aoc22_04",
  "aoc22_05",
  "aoc22_06",
  "aoc22_07",
  "aoc22_08",
  "aoc22_09",
  "aoc22_11",
  "aoc22_12",
  "aoc22_13",
  "aoc22_14",
  "aoc22_15",
  "aoc23_05",
  "aoc23_07",
  "aoc23_08"
]
